# ct-fuzz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
afl-2.52b/llvm_mode/: afl-clang-fast.c
docs/: PREREQUISITE.md  SPECS.md  TEST.md  USAGE.md
scripts/: ct-fuzz-diff.py
share/ct-fuzz/: top.py  utils.py
share/ct-fuzz/include/: ct-fuzz-cache.h  ct-fuzz-debug.h  ct-fuzz-observation.h  ct-fuzz-read.h  ct-fuzz-states.h  ct-fuzz-utils.h  ct-fuzz.h
share/ct-fuzz/lib/: ct-fuzz-cache.c  ct-fuzz-debug.c  ct-fuzz-memory.c  ct-fuzz-observation.c  ct-fuzz-read.c  ct-fuzz-states.c  ct-fuzz.c  ct_fuzz.c
share/include/: ct-fuzz.h
share/lib/: ct_fuzz.c
src/include/: ct-fuzz-extract-expr.h  ct-fuzz-instrument-self.h  ct-fuzz-instrument-src.h  ct-fuzz-instrument-utils.h  ct-fuzz-instrument.h  ct-fuzz-naming.h  ct-fuzz-options.h  ct-fuzz-read-inputs.h  generate-seeds.h  instantiate-harness.h  instrument-monitors.h  instrument-self.h  instrument-src.h  instrument-utils.h  naming.h  options.h  read-inputs.h  utils.h
src/lib/: ct-fuzz-extract-expr.cpp  ct-fuzz-instrument-self.cpp  ct-fuzz-instrument-src.cpp  ct-fuzz-instrument-utils.cpp  ct-fuzz-instrument.cpp  ct-fuzz-naming.cpp  ct-fuzz-options.cpp  ct-fuzz-read-inputs.cpp  generate-seeds.cpp  instantiate-harness.cpp  instrument-monitors.cpp  instrument-self.cpp  instrument-src.cpp  instrument-utils.cpp  naming.cpp  options.cpp  read-inputs.cpp  utils.cpp
test/: ct-fuzz-test.h  initialize_before_declare.c  lit.site.cfg  public_in_int.c  public_in_mixed.c  public_in_ptr.c  sort_negative.c  ssl3_cbc_remove_padding.c
test/input-reader/: integer.c  integer.c.hex  integer.c.output  non-derived.c  pointer.c  pointer.c.hex  pointer.c.output  public_in_int.c  public_in_int.c.output  public_in_mixed.c  public_in_mixed.c.hex  public_in_mixed.c.output  public_in_ptr.c  public_in_ptr.c.hex  public_in_ptr.c.output
test/length-annotation/: simple.c  simple.c.output
test/public-value-check/: match.c  match.c.hex  match.c.output  public_in_int.c  public_in_int.c.hex.match  public_in_int.c.hex.mismatch  public_in_int.c.output.match  public_in_int.c.output.mismatch  public_in_mixed.c  public_in_mixed.c.hex.match  public_in_mixed.c.hex.mismatch  public_in_mixed.c.output.match  public_in_ptr.c  public_in_ptr.c.hex.match  public_in_ptr.c.hex.mismatch  public_in_ptr.c.output.match  public_in_ptr.c.output.mismatch
test/seed-generation/: all_arrs.c  all_arrs.c.output  all_ints.c  all_ints.c.output  double_ptrs.c  double_ptrs.c.output  double_ptrs1.c  double_ptrs1.c.output  nested_structs.c  nested_structs.c.output  simple_structs.c  simple_structs.c.output  triple_ptrs.c  triple_ptrs.c.output  triple_ptrs1.c  triple_ptrs1.c.output
